--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h3>Feb 21</h3>
     <table class="table table-striped">
-      <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
+      <tr> <td>08:30</td>  <td>Arrive early if you would like help getting the required software setup.</td> </tr>
       <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/shell-novice/">Automating tasks with the Unix shell</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
@@ -21,7 +21,7 @@
       <tr> <td>13:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-inflammation/">Building programs with Python Part II</a></td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
+      <tr> <td>16:30</td>  <td><a href="https://docs.google.com/forms/d/e/1FAIpQLSdg2wc8u29tcwEW2KoqQgX97PfHGws4PNa9Z5G_O1afLe24rg/viewform" target="_blank">Post-workshop Survey</a></td> </tr>
       <tr> <td>16:40</td>  <td>END</td> </tr>
     </table>
   </div>
